Update load tất cả continent, country, airline và airports hết một lượt ngay khi khởi tạo ( tốn tầm 280 quotes), sau đó đổi các cột iata thành name